// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb component - snapshot > matches snapshot when hideRootLabel is false 1`] = `
<DocumentFragment>
  <nav
  class=""
  data-ods="breadcrumb"
  id=":r0:"
  role="navigation"
>

  <ol
    class="_breadcrumb__list_HASH_2"
  >

    <li
      class="_breadcrumb-item_HASH_2"
      data-ods="breadcrumb-item"
      role="listitem"
    >

      <a
        class="_link_HASH_2"
        data-ods="breadcrumb-link"
        href="/"
      >vRack services
      </a
      >

        <span
          class="_breadcrumb-separator_HASH_11"
          role="presentation"
        >
        </span
        >
        </li
        >

          <li
            class="_breadcrumb-item_HASH_2"
            data-ods="breadcrumb-item"
            role="listitem"
          >

            <a
              class="_link_HASH_2"
              data-ods="breadcrumb-link"
              href="/:id"
            >vRack service
            </a
            >

              <span
                class="_breadcrumb-separator_HASH_11"
                role="presentation"
              >
              </span
              >
              </li
              >

                <li
                  class="_breadcrumb-item_HASH_2"
                  data-ods="breadcrumb-item"
                  role="listitem"
                >

                  <span
                    aria-current="page"
                    data-ods="breadcrumb-link"
                    href="/:id/listing"
                  >vRack service listing
                  </span
                  >
                  </li
                  >
                  </ol
                  >
                  </nav
                  >
</DocumentFragment>
`;

exports[`Breadcrumb component - snapshot > matches snapshot when hideRootLabel is true 1`] = `
<DocumentFragment>
  <nav
  class=""
  data-ods="breadcrumb"
  id=":r1:"
  role="navigation"
>

  <ol
    class="_breadcrumb__list_HASH_2"
  >

    <li
      class="_breadcrumb-item_HASH_2"
      data-ods="breadcrumb-item"
      role="listitem"
    >

      <a
        class="_link_HASH_2"
        data-ods="breadcrumb-link"
        href="/:id"
      >vRack service
      </a
      >

        <span
          class="_breadcrumb-separator_HASH_11"
          role="presentation"
        >
        </span
        >
        </li
        >

          <li
            class="_breadcrumb-item_HASH_2"
            data-ods="breadcrumb-item"
            role="listitem"
          >

            <span
              aria-current="page"
              data-ods="breadcrumb-link"
              href="/:id/listing"
            >vRack service listing
            </span
            >
            </li
            >
            </ol
            >
            </nav
            >
</DocumentFragment>
`;
